<resources>
    <string name="nombreapp">FastFood</string>
    <string name="minombre">Daniel Avendano</string>
    <string name="registro">Registrate</string>
    <string name="comienzo">Comienza</string>
    <string name="ingresa">Ingresar</string>
    <string name="recupere_contrasena">Recupere tu Contrasena</string>
    <string name="notiene_cuenta">No tienes cuenta?</string>
    <string name="aventura">La aventura esta por iniciar, por favor iniciar sesion</string>
    <string name="lanuevaaventura">Inicie una nueva aventura con Derivefood y descubre una nueva forma de  ver el mundo</string>
    <string name="google">Ingresa con Google</string>
    <string name="ingrese_datos">Ingresa tus datos para registrarte y acceder a la aplicación</string>
    <string name="para_recuperar">Para recuperar su contrasena ingrese su correo</string>
    <string name="editar">Editar</string>
</resources>