<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gris">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="169dp"
        android:layout_height="161dp"
        android:layout_marginTop="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/ic_launcher" />

    <TextView
        android:id="@+id/tv2nombreapp"
        android:layout_width="259dp"
        android:layout_height="69dp"
        android:layout_marginTop="232dp"
        android:fontFamily="@font/angkor"
        android:text="@string/nombreapp"
        android:textAlignment="center"
        android:textColor="#F35E48"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.526"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/aventura1"
        android:layout_width="355dp"
        android:layout_height="99dp"
        android:layout_marginTop="356dp"
        android:fontFamily="serif"
        android:text="@string/lanuevaaventura"
        android:textAlignment="center"
        android:textSize="19sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btcomienza"
        android:layout_width="250dp"
        android:layout_height="66dp"
        android:layout_marginBottom="168dp"
        android:backgroundTint="#F35E48"
        android:fontFamily="monospace"
        android:text="@string/comienzo"
        android:textAlignment="center"
        android:textColor="#EDE9E9"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:strokeColor="#F4F0F0" />

    <TextView
        android:id="@+id/registrate"
        android:layout_width="159dp"
        android:layout_height="36dp"
        android:layout_marginBottom="72dp"
        android:fontFamily="monospace"
        android:text="@string/Registro"
        android:textAlignment="center"
        android:textColor="#F35E48"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>